test(LottoTest): 로또 테스트 완료